mise en place de l'ihm

--- a/com.perso.footcelad.parent/com.perso.footcelad.hmi/src/main/resources/org/com/perso/footcelad/hmi/client/Messages.properties
+++ b/com.perso.footcelad.parent/com.perso.footcelad.hmi/src/main/resources/org/com/perso/footcelad/hmi/client/Messages.properties
@@ -1,2 +1,13 @@
-sendButton = Send
-nameField = Enter your name
+championshipBtn = Championship
+matchsBtn = Games
+teamsBtn = Teams
+playersBtn = Players
+stadiumsBtn = Stadiums
+injuredBtn = Injured
+mapGELbl = MAP
+stadiumLbl = Stadium
+compoBtn = Compo
+versusLbl = CE CELAD -VS- OPPONENT
+dateLbl = Monday 09/04
+hourLbl = 19h30
+dispoBtn = Fill my disponibility
