--- a/com.perso.footcelad.parent/com.perso.footcelad.hmi/src/main/resources/org/com/perso/footcelad/hmi/client/Messages_fr.properties
+++ b/com.perso.footcelad.parent/com.perso.footcelad.hmi/src/main/resources/org/com/perso/footcelad/hmi/client/Messages_fr.properties
@@ -1,2 +1,13 @@
-sendButton = Envoyer
-nameField = Entrez votre nom
+championshipBtn = Championnat
+matchsBtn = Matchs
+teamsBtn = Equipes
+playersBtn = Joueurs
+stadiumsBtn = Stades
+injuredBtn = Blessé
+mapGELbl = MAP
+stadiumLbl = Stade
+compoBtn = Compo
+versusLbl = CE CELAD -Contre- Adversaire
+dateLbl = Lundi 09/04
+hourLbl = 19h30
+dispoBtn = Renseigner ma disponibilité
