--- a/com.perso.footcelad.parent/com.perso.footcelad.hmi/src/main/resources/org/com/perso/footcelad/hmi/client/Messages_fr.properties
+++ b/com.perso.footcelad.parent/com.perso.footcelad.hmi/src/main/resources/org/com/perso/footcelad/hmi/client/Messages_fr.properties
@@ -11,3 +11,4 @@ versusLbl = CE CELAD -Contre- Adversaire
 dateLbl = Lundi 09/04
 hourLbl = 19h30
 dispoBtn = Renseigner ma disponibilité
+healthy = En forme
